--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.CadastroClienteActivity" />
+        <activity android:name=".ui.activity.FormularioAssinanteActivity" />
     </application>
 
 </manifest>
