--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.DetalhesRotaActivity"></activity>
-        <activity android:name=".ui.activity.AssinantesActivity" />
-        <activity android:name=".ui.activity.FormularioAssinanteActivity" />
-        <activity android:name=".ui.activity.RotasActivity">
+        <activity
+            android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.DetalhesRotaActivity" />
+        <activity android:name=".ui.activity.FormularioAssinanteActivity" />
     </application>
 
 </manifest>
