--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 08 14:50:02 BRST 2019
-sdk.dir=/media/antonio/fe87fb4e-782c-4e52-b028-a5d0034a393e/Android/Sdk
+#Sat Nov 09 22:41:55 BRST 2019
+sdk.dir=C\:\\Users\\Antonio\\AppData\\Local\\Android\\Sdk
